--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <!-- Markdown Preview project: R Pulcer -->
@@ -53,8 +53,8 @@
 <script src='./node_modules/marked/lib/marked.js'></script>
 
 <script>
-  let src = document.getElementById("source");
-  let prv = document.getElementById("preview");
+  const src = document.getElementById("source");
+  const prv = document.getElementById("preview");
 
   document.getElementById("render").addEventListener("click", process);
   document.getElementById("bold").addEventListener("click", boldSelection);
@@ -69,31 +69,47 @@
 
   function boldSelection() {
     let txt = src.value;
-    // Note: I tried using regex for ** globally, as /**/g and /\x2A\x2A/g, but it did not work...
-    // Text editor took /* to be a comment.  Just brute force while loop works for now.
-    if(txt.includes("**")) {
-      while(txt.includes("**")) {
-        txt = txt.replace("**", "");
-      }
+    let txtSubstr = txt.substr(src.selectionStart, src.selectionEnd - src.selectionStart);
+
+    // NOTE: *** means both BOLD and Italics together
+    if(txtSubstr.startsWith("***") && txtSubstr.endsWith("***")) {
+      txtSubstr = txtSubstr.substr(2, txtSubstr.length - 4);
+    }
+    else if(txtSubstr.startsWith("**") && txtSubstr.endsWith("**")) {
+      txtSubstr = txtSubstr.substr(2, txtSubstr.length - 4);
+    }
+    else if(txtSubstr.startsWith("*") && txtSubstr.endsWith("*")) {
+      txtSubstr = "**" + txtSubstr + "**";
     }
     else {
-      txt = "**" + txt + "**";
+      txtSubstr = "**" + txtSubstr + "**";
     }
-    src.value = txt;
+
+    src.value = txt.substr(0,src.selectionStart) + txtSubstr + txt.substr(src.selectionEnd);
+    console.log(src.value)
     process();
   }
 
   function italicsSelection() {
     let txt = src.value;
-    if(txt.includes("*")) {
-      while(txt.includes("*")) {
-        txt = txt.replace("*", "");
-      }
+    let txtSubstr = txt.substr(src.selectionStart, src.selectionEnd - src.selectionStart);
+
+    // NOTE: *** means both BOLD and Italics together
+    if(txtSubstr.startsWith("***") && txtSubstr.endsWith("***")) {
+      txtSubstr = txtSubstr.substr(1, txtSubstr.length - 2);
+    }
+    else if(txtSubstr.startsWith("**") && txtSubstr.endsWith("**")) {
+      txtSubstr = "*" + txtSubstr + "*";
+    }
+    else if(txtSubstr.startsWith("*") && txtSubstr.endsWith("*")) {
+      txtSubstr = txtSubstr.substr(1, txtSubstr.length - 2);
     }
     else {
-      txt = "*" + txt + "*";
+      txtSubstr = "*" + txtSubstr + "*";
     }
-    src.value = txt;
+
+    src.value = txt.substr(0,src.selectionStart) + txtSubstr + txt.substr(src.selectionEnd);
+    console.log(src.value)
     process();
   }
 
@@ -103,6 +119,9 @@
   }
 
   function runTests() {
+    // These tests worked with Bolding and Italicizing the entire <textarea>.  Now it tries to run with no mouse/kb selection,
+    // so I commented out for now.
+    /*
     src.value="Testing 123";
     console.log("Test 1");
     boldSelection();
@@ -110,6 +129,15 @@
     console.log("Test 2");
     boldSelection();
     console.assert(src.value == "Testing 123", "boldSelection() not working as expected: Trying to un-BOLD.");
+
+    src.value="Testing 123";
+    console.log("Test 3");
+    italicsSelection();
+    console.assert(src.value == "*Testing 123*", "italicsSelection() not working as expected: Trying to Italics.");
+    console.log("Test 4");
+    italicsSelection();
+    console.assert(src.value == "Testing 123", "italicsSelection() not working as expected: Trying to un-Italics.");
+    */
   }
 </script>
 
